# click-demo

./: README.md  pyproject.toml
src/click_demo/: cli.py
tests/: test_greeting.py
