[project]
name = "click-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hfoote", email = "haydenfoote@arizona.edu" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
click-demo = "click_demo:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
